# ese5190-2022-lab2b-esp

lab/01_registers/: CMakeLists.txt  README.md  neopixel.c  registers.c
lab/02_repl/: README.md
lab/03_sequencer/: README.md  lab3_pico_side.c
lab/04_slow_motion/: README.md  lab4_scale_blink_host.py  lab4_scale_blink_pico.c
lab/05_i2c_traffic/: README.md
lab/06_pioscope/: README.md
lab/07_pio_sequencer/: README.md
lab/08_adps_protocol/: CMakeLists.txt  README.md  i2c_bus_scan.c  pio_i2c.c  pio_i2c.h
lab/09_lab_on_a_chip/: README.md  i2c_bus_scan.c  pio_i2c.c  ws2812.c
lab/10_protoboard/: README.md  neopixel.h
